--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vue Stocks</title>
+  <title>Stock screener</title>
   <link rel="stylesheet" href="/src/style.css">
   <link rel="icon" href="./public/favicon.ico" type="image/png">
 </head>
